CI Infrastructure (#13)
* Folder setup for ci yaml files.

* Cleanup changes from previous work.

* Code cleanup before ci/cd changes.

* Complete backend ci files.

* Remove frontend.yml for ci.

* Add a node.js CI file.

* Update the working directories for both ci files.

* Update npm install command to be install clean >> clean install

* Create a defaults directory for node.js CI.

* Update the package.json in frontend to have the needed depndencies. Dependencies got corrupted when transferring files and moving directory structure.

* Update vite config to use appropriate talwind library. Install tailwind libararies needed for vite. Update the node linter files.

* Add axios and react-dom to dependencies.

* Remove the 22.x node version from CI file.

* Update the backend configuration to have proper configuration files for LSP idenitification.

* Add tailwindcss to the depenendcies.

* Update to the old tailwind modular imports over encapsulating imports.

* Remove frontend testing frokm node.js CI file.

* Update the branches on which CI runs to be only the main branch.

* Build the backend with mvn and make a maven executable for CI.